--- a/.eslintignore
+++ b/.eslintignore
@@ -1,7 +1,6 @@
-src/**/generated
 build
 node_modules
 .eslintrc.js
-eslint-config-boundaries.js
-next.config.js
 jest.config.js
+pm2.config.js
+pm2-dev.config.js
