--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "bsc",
     "arbitrum"
   ],
-  "main": "build/index.js",
+  "main": "./build/index.js",
   "scripts": {
-    "build": "yarn clean && yarn lint && yarn build",
-    "dev": "nodemon --watch src -e ts",
-    "lint": "eslint . --ext .js,.ts && tsc --noEmit --pretty --fix",
-    "test": "yarn lint && jest -c ./jest.config.json",
+    "build": "yarn clean && yarn lint && tsc -p tsconfig-build.json",
+    "start": "yarn build && pm2 start pm2.config.js",
+    "start:dev": "pm2 start pm2-dev.config.js --watch",
+    "stop": "pm2 stop pm2.config.js",
+    "stop:dev": "pm2 stop pm2-dev.config.js",
+    "lint": "eslint . --ext .js,.ts && tsc --noEmit --pretty",
+    "lint:autofix": "eslint . --ext .js,.ts,.tsx --fix",
+    "test": "yarn lint && jest --config ./jest.config.js",
     "clean": "rm -rf build/*"
   },
   "repository": {
@@ -31,7 +35,9 @@
   "dependencies": {
     "express": "^4.17.3",
     "node-cache": "^5.1.2",
-    "web3": "^1.7.0"
+    "web3": "^1.7.0",
+    "web3-core-helpers": "^1.7.0",
+    "web3-utils": "^1.7.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
@@ -47,12 +53,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
-    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5"
   },
   "engines": {
-    "node": ">=16.14.0"
+    "node": ">=14.0.0"
   }
 }
