--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,10 +1,9 @@
 {
   "extends": "./tsconfig.json",
   "exclude": [
-    "**/*.spec.ts"
+    "node_modules",
   ],
   "compilerOptions": {
-    "sourceMap": false,
-    "noEmit": false,
+    "noEmit": true,
   }
 }
