--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "homepage": "https://github.com/akropolisio/gas-oracle#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "node-cache": "^5.1.2",
     "web3": "^1.7.0",
@@ -39,6 +40,7 @@
     "web3-utils": "^1.7.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.21",
