Remove hard coded rpc urls, update scripts

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,22 @@ jobs:
           SSH_KEY: ${{secrets.SSH_KEY}}
       - name: Install PM2
         run: npm install -g pm2
+      - name: Create env file
+        run: |
+          touch .env
+          echo "JSON_RPC_URL_1=\"$JSON_RPC_URL_1\"
+          JSON_RPC_URL_4=\"$JSON_RPC_URL_4\"
+          JSON_RPC_URL_56=\"$JSON_RPC_URL_56\"
+          JSON_RPC_URL_97=\"$JSON_RPC_URL_97\"
+          JSON_RPC_URL_42161=\$JSON_RPC_URL_42161\"
+          JSON_RPC_URL_421611=\"$JSON_RPC_URL_42161\"" >> .env
+        shell: bash
+        env:
+          JSON_RPC_URL_1: ${{ secrets.JSON_RPC_URL_1 }}
+          JSON_RPC_URL_4: ${{ secrets.JSON_RPC_URL_4 }}
+          JSON_RPC_URL_56: ${{ secrets.JSON_RPC_URL_56 }}
+          JSON_RPC_URL_97: ${{ secrets.JSON_RPC_URL_97 }}
+          JSON_RPC_URL_42161: ${{ secrets.JSON_RPC_URL_42161 }}
+          JSON_RPC_URL_421611: ${{ secrets.JSON_RPC_URL_421611 }}
       - name: Deploy
         run: pm2 deploy pm2.json production
