--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,17 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           node-version: 14
-      - name: Set up SSH
+      - name: Configure Host
         run: |
-          echo "$SSH_KEY" > ./deploy.key
-          sudo chmod 400 ./deploy.key
+          mkdir -p ~/.ssh
+          echo "$SSH_KEY" >> ~/.ssh/github-ci
+          chmod 400 ~/.ssh/github-ci
+          echo -e "Host github-ci
+          \tUser github-ci
+          \tHostName 64.227.111.66
+          \tIdentityFile ~/.ssh/github-ci
+          \tStrictHostKeyChecking No" >> ~/.ssh/config
+          chmod 400 ~/.ssh/config
         shell: bash
         env:
           SSH_KEY: ${{secrets.SSH_KEY}}
@@ -28,8 +35,8 @@ jobs:
           JSON_RPC_URL_4=\"$JSON_RPC_URL_4\"
           JSON_RPC_URL_56=\"$JSON_RPC_URL_56\"
           JSON_RPC_URL_97=\"$JSON_RPC_URL_97\"
-          JSON_RPC_URL_42161=\$JSON_RPC_URL_42161\"
-          JSON_RPC_URL_421611=\"$JSON_RPC_URL_42161\"" >> .env
+          JSON_RPC_URL_42161=\"$JSON_RPC_URL_42161\"
+          JSON_RPC_URL_421611=\"$JSON_RPC_URL_421611\"" >> .env
         shell: bash
         env:
           JSON_RPC_URL_1: ${{ secrets.JSON_RPC_URL_1 }}
